--- a/analyse.html
+++ b/analyse.html
@@ -102,7 +102,7 @@
             //ajax
             $.ajax({
                     type: "post",
-                    url: "http://localhost:3000/post",
+                    url: "http://159.89.238.251:3000/post",
                     contentType: "application/json; charset=utf-8",
                     data: jsonT,
                     timeout:100000,
